--- a/kinomart/kinomart/templates/theme.html
+++ b/kinomart/kinomart/templates/theme.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Kino Mart</title>
+        <title>{% block title %} Kino Mart{% endblock %}</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
