--- a/kinomart/kinomart/templates/user_profile.html
+++ b/kinomart/kinomart/templates/user_profile.html
@@ -1,6 +1,7 @@
 {% extends 'theme.html' %}
 
 {% load static %}
+{% block title %}Profile{% endblock %}
 {% block content %}
 
 <h1>User Profile</h1>
