--- a/kinomart/user/templates/user/theme.html
+++ b/kinomart/user/templates/user/theme.html
@@ -241,6 +241,14 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
+
+
+
+
+    {% block scripts %}
+
+
+    {% endblock %}
     </body>
 
 </html>
