--- a/kinomart/admin/templates/admin/add_product.html
+++ b/kinomart/admin/templates/admin/add_product.html
@@ -1,4 +1,4 @@
-{% extends 'admin_theme.html' %}
+{% extends 'admin/admin_theme.html' %}
 {% load static %}
 
 {% block content %}
@@ -6,7 +6,9 @@
     <div class="col-md-2"></div>
     <div class="card mb-4 mt-5 pt-3 col-md-8">
         <div class="card-header">
-            <i class="fa-solid fa-users"></i>
+            
+            <i class="fa-solid fa-boxes-stacked"></i>
+            
             Add New Product
         </div>
         <div class="card-body">
@@ -37,7 +39,7 @@
                 <input type="radio" class="" id="choice1" name="is_offer" value="True" > 
                 <label for="choice2" class="form-label">No</label>
 
-                <input type="radio" class="active" id="choice2" name="is_offer" value="False" checked > 
+                <input type="radio"  id="choice2" name="is_offer" value="False" checked > 
             </div>
             
               
@@ -89,21 +91,21 @@
                 <div class="mb-1">
             
                     <label for="" class="form-label">Varient</label>
-                    <button type="button" id="addButton">Add</button>
+                    <button class="btn btn-sm btn-outline-success" type="button" id="addButton"><i class="fa-solid fa-plus"></i>Add</button>
                     <br>
                     <div id="variantContainer">
-                        <div class="variant">
-                            <input type="text" name="quantity1" placeholder="Quantity" required>
+                        <div class="variant" style="display: flex; justify-content: space-between;">
+                            <input type="text" class="form-control" name="quantity1" placeholder="Quantity" required>
                             <select name="unit1">
                                 {% for unit in units %}
-                                    <option value="{{ unit.id }}">{{ unit.unit }}</option>
+                                    <option class="form-control" value="{{ unit.id }}">{{ unit.unit }}</option>
                                 {% endfor %}
                             </select>
-                            <input type="text" name="stock1" placeholder="Stock" required>
-                            <input type="text" name="price1" placeholder="Price" required>
+                            <input type="text" name="stock1" class="form-control" placeholder="Stock" required>
+                            <input type="text" name="price1" class="form-control" placeholder="Price" required>
                             <!-- Add more fields as needed -->
                         </div>
-                        <br>
+                        
                     </div>
 
                     
@@ -137,12 +139,79 @@
 </div>
 
 
+{% endblock %}
+
+{% block scripts %}
+
+<script>
+
+    
+    
+    $(document).ready(function() {
+        var variantCount = 1;
+        $('#addButton').click(function() {
+            variantCount++;
+            var newVariant = '<div class="variant" style="display: flex; justify-content: space-between;">' +
+                '<input type="text" placeholder="Quantity" class="form-control" name="quantity' + variantCount + '">' +
+                '<select name="unit'+variantCount+'">'+
+                                '{% for unit in units %}'+
+                                    '<option value="{{ unit.id }}">{{ unit.unit }}</option>'+
+                                '{% endfor %}'+
+                            '</select>'+
+                '<input type="text" class="form-control" placeholder="Stock" name="stock' + variantCount + '">' +
+                '<input type="text" class="form-control" placeholder="Price" name="price' + variantCount + '">' +
+                '<button class="remove-variant btn btn-sm btn-outline-danger"><i class="fa-solid fa-xmark"></i></button>' +
+                '</div>';
+            $('#variantContainer').append(newVariant);
+            $('#variantCount').val(variantCount);
+        });
+
+        $(document).on('click', '.remove-variant', function() {
+        $(this).closest('.variant').remove();  
+        variantCount--;
+        $('#variantCount').val(variantCount);
+
+        });
+
+
+
+        $('#category').change(function() {
+console.log('Category changed'); // Add this line
+
+var url = "/admin/ajax_load_subcategories/";  // get the url of the `load_subcategories` view
+var categoryId = $(this).val();  // get the selected category ID from the HTML input
+
+$.ajax({                       // initialize an AJAX request
+url: url,                    // set the url of the request (= /hr/ajax/load-subcategories/)
+data: {
+    'category': categoryId       // add the category id to the GET parameters
+},
+success: function (data) {   // `data` is the return of the `load_subcategories` view function
+    $("#sub_category").html(data);  // replace the contents of the subcategory input with the data that came from the server
+},
+error: function (jqXHR, textStatus, errorThrown) { // Add this
+    console.log(textStatus, errorThrown);
+},
+complete: function (jqXHR, textStatus) { // And this
+    console.log('AJAX call completed with status: ' + textStatus);
+}
 
 
 
 
+
+
+
+        });
+
+    });
+
+
+
+
+    });
+    </script>
 
 
 
 {% endblock %}
-
