--- a/kinomart/admin/templates/admin/edit_categories.html
+++ b/kinomart/admin/templates/admin/edit_categories.html
@@ -1,4 +1,4 @@
-{% extends 'admin_theme.html' %}
+{% extends 'admin/admin_theme.html' %}
 {% load static %}
 
 {% block content %}
@@ -11,7 +11,7 @@
 
         <div style="display: inline;" class="d-grid gap-2 d-md-flex justify-content-md-end">
 
-        <a id="add-category-btn" href="{% url 'add_product' %}" class="btn btn-success btn-sm" ><i class="fa-regular fa-square-plus"></i> Add Products</a>
+        <a href="{% url 'add_product' %}" class="btn btn-success btn-sm" ><i class="fa-regular fa-square-plus"></i> Add Products</a>
         </div>
         <form id="add-category-form" action="{% url 'add_category' %}" method="post" style="display: none;">
             {% csrf_token %}
@@ -31,12 +31,22 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <h5 style="display: inline;">{{ category.category_name }}</h5>
+        <button title="Edit category" id="update-category-btn{{category.category_id}}" class="btn btn-secondary btn-sm" ><i class="fa-regular fa-pen-to-square"></i></button>
+        
                     <form class="add-subcategory-form" action="{% url 'add_subcategory' %}" method="post" style="display: none;">
                         {% csrf_token %}
                         <div style="display: flex; justify-content: space-between; width: 400px;">
                             <input type="text" name="subcategory_name" class="form-control" placeholder="Enter new subcategory" required>
                             <input type="hidden" name="category_id" value="{{category.category_id}}">
                             <input type="submit" class="btn btn-secondary" value="Submit">
+                        </div>
+                    </form>
+                    <form id="update-category-form{{category.category_id}}" action="{% url 'update_category' %}" method="post" style="display: none;">
+                        {% csrf_token %}
+                        <div style="display: flex; justify-content: space-between; width: 400px;">
+                            <input type="text" name="category_name" class="form-control" value="{{category.category_name}}" required>
+                            <input type="hidden" name="category_id" value="{{category.category_id}}">
+                            <input type="submit" class="btn btn-secondary" value="Update">
                         </div>
                     </form>
                     <div style="display: inline;" class="d-grid gap-2 d-md-flex justify-content-md-end">
@@ -53,8 +63,17 @@
                     {% for subcategory in category.subcategories %}
 
                     <h6 style="display: inline;">{{subcategory.subcategory_name}}</h6>
+                    <button title="Edit subcategory" id="update-subcategory-btn{{subcategory.subcategory_id}}" class="btn btn-secondary btn-sm" ><i class="fa-regular fa-pen-to-square"></i></button>
+                    
                     <a class="btn btn-outline-danger btn-sm" href="delete_subcategory/{{ subcategory.subcategory_id }}" onclick="return confirm('You are deleting this sub category for ever. The products will be moved to holded list \n\n Are you sure?');"> Delete {{ subcategory.subcategory_name }}</a>
-
+                    <form id="update-subcategory-form{{subcategory.subcategory_id}}" action="{% url 'update_subcategory' %}" method="post" style="display: none;">
+                        {% csrf_token %}
+                        <div style="display: flex; justify-content: space-between; width: 400px;">
+                            <input type="text" name="subcategory_name" class="form-control" value="{{subcategory.subcategory_name}}" required>
+                            <input type="hidden" name="subcategory_id" value="{{subcategory.subcategory_id}}">
+                            <input type="submit" class="btn btn-secondary" value="Update">
+                        </div>
+                    </form>
                         <table class="table table-striped table-hover">
                             <thead>
                                 <tr>
@@ -107,6 +126,33 @@
 
 
 
+{% endblock %}
+{% block scripts %}
+<script>
+    $(document).ready(function(){
+        $('#add-category-btn').click(function(){
+            $('#add-category-form').show();
+        });
+        $('.add-subcategory-btn').click(function(){
+            $('.add-subcategory-form').show();
+        });
+        $('[id^="update-category-btn"]').click(function(){
+            var categoryId = this.id.replace('update-category-btn', '');
+        $('#update-category-form' + categoryId).show();
+        });
+
+        $('[id^="update-subcategory-btn"]').click(function(){
+            var categoryId = this.id.replace('update-subcategory-btn', '');
+        $('#update-subcategory-form' + categoryId).show();
+        });
+
+        
+        
+    
+    
+    });
+
+</script>
 {% endblock %}
 
            
